# devue_plugin_core

./: CMakeLists.txt  CMakePresets.json
dependencies/: CMakeLists.txt
include/: devue_sdk.hpp
include/devue_sdk/: defines.hpp
include/devue_sdk/misc/: devue_data.hpp  devue_ec.hpp  devue_file_type.hpp
include/devue_sdk/model/: devue_material.hpp  devue_mesh.hpp  devue_model.hpp  devue_model_pack.hpp  devue_vertex.hpp
include/devue_sdk/model/material/: devue_material.hpp  devue_material_blinn_phong.hpp  devue_material_phong.hpp
include/devue_sdk/plugin/: devue_plugin_desc.hpp  devue_plugin_interface.hpp
include/devue_sdk/serial/: serial_image.hpp  serial_misc.hpp  serial_model.hpp
sdk/: CMakeLists.txt
sdk/include/image/: devue_image.hpp
sdk/include/model/: devue_model_col.hpp
sdk/serial/: image_serial.cpp  image_serial.hpp  model_serial.cpp  model_serial.hpp
source/: CMakeLists.txt
source/devue_sdk/plugin/: devue_plugin_base.cpp  devue_plugin_base.hpp
source/devue_sdk/serial/: serial_image.cpp  serial_misc.cpp  serial_model.cpp
source/devue_sdk/utilities/: util_string.hpp
tests/: CMakeLists.txt  build_sdk.cpp  build_sdk_interface.cpp  test_serial.cpp
